# axint

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIX.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUBMISSIONS.md  TRADEMARKS.md  eslint.config.js  glama.json  metrics.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  server.json  smithery.yaml  sprint-readme-examples.patch  tsconfig.examples.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github-org-profile/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good-first-issue.md  new_template.yml  rfc.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish-mcp-registry.yml  release.yml  wwdc-nightly.yml  xcode-extension.yml
benchmarks/: README.md  compile.bench.ts
docs/: CASE_STUDY_SWARM.md  COVERAGE.md  ERRORS.md  FIX_PACKET.md  RELEASE_NOTES.md  voice-rules.md
docs/launch/: LAUNCH-POSTS.md
docs/research/: xcode-26-3-completion.md
examples/: README.md  calendar-assistant.ts  health-log.ts  messaging.ts  pizza-delivery.live-activity.ts  pizza-order.app-shortcut.ts  pizza-share.extension.ts  pizza-size.app-enum.ts  profile-card.ts  smart-home.ts  step-counter.ts  trail-planner.ts  weather-app.ts
examples/swift/: README.md  broken-intent.swift  broken-widget.swift  clean-intent.swift  clean-view.swift
extensions/: README.md
extensions/claude-code/: .mcp.json  README.md
extensions/claude-desktop/: README.md  build.sh  manifest.json
extensions/codex/: README.md  mcp.json
extensions/cursor/: README.md  mcp.json
extensions/jetbrains/: README.md  mcp.json
extensions/neovim/: README.md
extensions/vscode/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extensions/windsurf/: README.md  mcp_config.json
extensions/xcode/: README.md
extensions/zed/: README.md  settings.json
launch/: README.md  beta-testers.md  checklist.md  discord-setup.md  hn-post.md  twitter-thread.md
profile/: README.md
python/: README.md  pyproject.toml
python/axint/: __init__.py  bundle_hash.py  cli.py  generator.py  ir.py  mcp_server.py  parser.py  sdk.py  validator.py
python/axintai/: __init__.py  cli.py  generator.py  ir.py  mcp_server.py  parser.py  sdk.py  validator.py
python/examples/: README.md  create_event.py  health_log.py  profile_card.py  step_counter_widget.py  weather_app.py
python/tests/: test_bundle_hash.py  test_cli.py  test_entity_generator.py  test_examples.py  test_generator.py  test_mcp_server.py  test_parser.py  test_sdk.py  test_validator.py
python/typings/mcp/: __init__.pyi  types.pyi
python/typings/mcp/server/: __init__.pyi  stdio.pyi
registry/: README.md  package-lock.json  package.json  wrangler.toml
registry/migrations/: 001_init.sql
registry/scripts/: seed-templates.ts
registry/src/: frontend.ts  index.ts
scripts/: check-docs-freshness.py  check-metrics.mjs  check-public-boundary.mjs  check-readme-mcp-docs.mjs  check-release-parity.mjs  check-versions.mjs  emit-metrics.mjs  gen-swift-fixer.ts  generate-demo.sh  metrics.mjs  publish-cloud-report.ts  sync-roadmap-metrics.mjs  sync-versions.mjs  versions.mjs  wwdc-diff.ts
site/: _headers  _redirects  index.html
spec/language/: README.md  benchmark.md  diagnostic-protocol.md  diagnostics.md  failures.md  grammar.md  ir-mapping.md  keywords.md  non-goals.md  parser-recovery.md  principles.md  why-agents.md
spm-plugin/: .gitignore  Package.swift  README.md
src/cli/: add.ts  agent.ts  cloud.ts  compile.ts  doctor.ts  eject.ts  feature.ts  feedback.ts  format.ts  index.ts  login.ts  memory.ts  project.ts  publish.ts  repair.ts  run.ts  scaffold.ts  schema.ts  search.ts  session.ts  status.ts  suggest.ts  templates.ts  tokens.ts  upgrade.ts  validate-swift.ts  validate.ts  watch.ts  workflow.ts  xcode-check.ts  xcode-doctor.ts  xcode-extension.ts  xcode-fix.ts  xcode-guard.ts  xcode-packet.ts  xcode-setup.ts
src/cloud/: check.ts  feedback-store.ts
src/core/: app-enum-generator.ts  app-enum-parser.ts  app-enum-validator.ts  app-generator.ts  app-parser.ts  app-shortcut-generator.ts  app-shortcut-parser.ts  app-shortcut-validator.ts  app-validator.ts  axint-config.ts  bundle-hash.ts  compile-pipeline.ts  compiler.ts  credentials.ts  diagnostics.ts  eject.ts  env.ts  extension-generator.ts  extension-parser.ts  extension-validator.ts  format.ts  generator.ts  (+25 more)
(+187 files in other folders)
