[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "axintai"
version = "0.1.0"
description = "Python SDK for Axint — define Apple App Intents in Python, ship to Siri."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Agentic Empire", email = "hello@axint.ai" },
]
keywords = [
    "apple",
    "app-intents",
    "siri",
    "shortcuts",
    "ai-agents",
    "mcp",
    "swift",
    "code-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://axint.ai"
Documentation = "https://github.com/agenticempire/axint/tree/main/python#readme"
Repository = "https://github.com/agenticempire/axint"
Issues = "https://github.com/agenticempire/axint/issues"
Changelog = "https://github.com/agenticempire/axint/blob/main/CHANGELOG.md"

[project.scripts]
axintai = "axintai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["axintai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
