[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "axint"
version = "0.4.1"
description = "Python SDK for Axint — define Apple App Intents, Views, Widgets, and Apps in Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Axint contributors" },
]
keywords = [
    "apple",
    "app-intents",
    "siri",
    "shortcuts",
    "ai-agents",
    "mcp",
    "swift",
    "code-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=0.1.0"]
registry = ["pyyaml>=6.0"]
all = ["mcp>=0.1.0", "pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pyright>=1.1.400",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://axint.ai"
Documentation = "https://github.com/agenticempire/axint/tree/main/python#readme"
Repository = "https://github.com/agenticempire/axint"
Issues = "https://github.com/agenticempire/axint/issues"
Changelog = "https://github.com/agenticempire/axint/blob/main/CHANGELOG.md"

[project.scripts]
axint-py = "axint.cli:main"
axint-mcp-py = "axint.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["axint"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[[tool.mypy.overrides]]
module = "axint.mcp_server"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pyright]
include = ["axint"]
exclude = ["axint/mcp_server.py"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportAttributeAccessIssue = "error"
reportArgumentType = "error"
reportReturnType = "error"
